resolved sonar fixes